--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,14 @@ inputs:
   registry:
     description: 'Registry url including protocol (with or without trailing slash)'
     required: true
-  path:
+  registry_path:
     description: 'Path in the docker registry (with or without leading and trailing slashes)'
+    required: true
+  registry_user:
+    description: 'The registry username'
+    required: true
+  registry_password:
+    description: 'The registry password'
     required: true
   tag:
     description: 'Name of the tag'
@@ -15,12 +21,6 @@ inputs:
     description: 'Action does not fail if a tag is not found'
     default: 'false'
     required: false
-  username:
-    description: 'The registry username'
-    required: true
-  password:
-    description: 'The registry password'
-    required: true
 runs:
   using: 'node20'
   main: 'dist/index.js'
